--- a/style.css
+++ b/style.css
@@ -154,7 +154,21 @@
   max-height: 500px; /* Sesuaikan dengan kebutuhan Anda */
   opacity: 1;
 }
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+  display: none; /* Sembunyikan spinner awalnya */
+}
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 .sidebar_nav .has-child > a:hover {
   cursor: pointer;
 }
