--- a/css/login/login.css
+++ b/css/login/login.css
@@ -2,6 +2,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica, Arial, sans-serif;
   font-weight: 300;
   margin: 0;
+  box-sizing: border-box;
 }
 
 html,
@@ -13,6 +14,8 @@ body {
   align-items: center;
   justify-content: center;
   background: #f3f2f2;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 h4 {
@@ -36,8 +39,10 @@ form {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  width: 400px;
-  min-height: 430px;
+  width: 500px;
+  height: 430px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 form h4 {
   margin-bottom: 10px;
@@ -235,4 +240,18 @@ input:focus {
   height: 40px;
   width: auto;
   margin: 20px;
+}
+
+@media (max-width: 767.98px) {
+  form {
+    width: 100%;
+    padding: 30px 35px;
+  }
+  .session {
+    width: 100vw;
+    flex-direction: column;
+  }
+  .session .left {
+    width: 100vw;
+  }
 }
