--- a/css/login/login.scss
+++ b/css/login/login.scss
@@ -3,6 +3,7 @@
     Arial, sans-serif;
   font-weight: 300;
   margin: 0;
+  box-sizing: border-box;
 }
 
 $primary: rgb(182, 157, 230);
@@ -16,6 +17,8 @@ body {
   align-items: center;
   justify-content: center;
   background: #f3f2f2;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 h4 {
   font-size: 24px;
@@ -36,8 +39,10 @@ form {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  width: 400px;
-  min-height: 430px;
+  width: 500px;
+  height: 430px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 
   h4 {
     margin-bottom: 10px;
@@ -222,5 +227,21 @@ $displacement: 3px;
     height: 40px;
     width: auto;
     margin: 20px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  form {
+    width: 100%;
+    padding: 30px 35px;
+  }
+
+  .session {
+    width: 100vw;
+    flex-direction: column;
+
+    .left {
+      width: 100vw;
+    }
   }
 }
