--- a/css/login/login.css
+++ b/css/login/login.css
@@ -1,257 +1,290 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  margin: 0;
-  box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 html,
 body {
-  height: 100vh;
-  width: 100vw;
-  margin: 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #f3f2f2;
-  overflow-x: hidden;
-  overflow-y: auto;
+    height: 100vh;
+    width: 100vw;
+    margin: 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f3f2f2;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 h4 {
-  font-size: 24px;
-  font-weight: 600;
-  color: #000;
-  opacity: 0.85;
+    font-size: 24px;
+    font-weight: 600;
+    color: #000;
+    opacity: 0.85;
 }
 
 label {
-  font-size: 12.5px;
-  color: #000;
-  opacity: 0.8;
-  font-weight: 400;
+    font-size: 12.5px;
+    color: #000;
+    opacity: 0.8;
+    font-weight: 400;
 }
 
 form {
-  padding: 0 50px;
-  background: #fefefe;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  width: 500px;
-  height: 430px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+    padding: 0 50px;
+    background: #fefefe;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 500px;
+    height: 430px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
+
 form h4 {
-  margin-bottom: 10px;
-  color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+    color: rgba(0, 0, 0, 0.5);
 }
+
 form h4 span {
-  color: black;
-  font-weight: 700;
+    color: black;
+    font-weight: 700;
 }
+
 form p {
-  line-height: 155%;
-  margin-bottom: 5px;
-  font-size: 14px;
-  color: #000;
-  opacity: 0.65;
-  font-weight: 400;
-  max-width: 250px;
-  margin-bottom: 30px;
+    line-height: 155%;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #000;
+    opacity: 0.65;
+    font-weight: 400;
+    max-width: 250px;
+    margin-bottom: 30px;
 }
 
 a.discrete {
-  color: rgba(0, 0, 0, 0.4);
-  font-size: 14px;
-  border-bottom: solid 1px rgba(0, 0, 0, 0);
-  padding-bottom: 4px;
-  margin-left: auto;
-  font-weight: 300;
-  transition: all 0.3s ease;
-  margin-top: 40px;
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 14px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0);
+    padding-bottom: 4px;
+    margin-left: auto;
+    font-weight: 300;
+    transition: all 0.3s ease;
+    margin-top: 40px;
 }
+
 a.discrete:hover {
-  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 }
 
 button {
-  -webkit-appearance: none;
-  width: auto;
-  min-width: 100px;
-  border-radius: 24px;
-  text-align: center;
-  padding: 15px 40px;
-  margin-top: 5px;
-  background-color: #b08bf8;
-  color: #fff;
-  font-size: 14px;
-  margin-left: auto;
-  font-weight: 500;
-  box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
-  border: none;
-  transition: all 0.3s ease;
-  outline: 0;
-  cursor: pointer;
-  margin-top: 25px;
+    -webkit-appearance: none;
+    width: auto;
+    min-width: 100px;
+    border-radius: 24px;
+    text-align: center;
+    padding: 15px 40px;
+    margin-top: 5px;
+    background-color: #b08bf8;
+    color: #fff;
+    font-size: 14px;
+    margin-left: auto;
+    font-weight: 500;
+    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
+    border: none;
+    transition: all 0.3s ease;
+    outline: 0;
+    cursor: pointer;
+    margin-top: 25px;
 }
+
 button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 2px 6px -1px rgba(182, 157, 230, 0.65);
+    transform: translateY(-3px);
+    box-shadow: 0 2px 6px -1px rgba(182, 157, 230, 0.65);
 }
+
 button:hover:active {
-  transform: scale(0.99);
+    transform: scale(0.99);
 }
 
 input {
-  font-size: 16px;
-  padding: 20px 0px;
-  height: 56px;
-  border: none;
-  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-  background: #fff;
-  width: 280px;
-  box-sizing: border-box;
-  transition: all 0.3s linear;
-  color: #000;
-  font-weight: 400;
-  -webkit-appearance: none;
+    font-size: 16px;
+    padding: 20px 0px;
+    height: 56px;
+    border: none;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+    background: #fff;
+    width: 280px;
+    box-sizing: border-box;
+    transition: all 0.3s linear;
+    color: #000;
+    font-weight: 400;
+    -webkit-appearance: none;
 }
+
 input:focus {
-  border-bottom: solid 1px rgb(182, 157, 230);
-  outline: 0;
-  box-shadow: 0 2px 6px -8px rgba(182, 157, 230, 0.45);
+    border-bottom: solid 1px rgb(182, 157, 230);
+    outline: 0;
+    box-shadow: 0 2px 6px -8px rgba(182, 157, 230, 0.45);
 }
 
 .floating-label {
-  position: relative;
-  margin-bottom: 10px;
-  width: 100%;
+    position: relative;
+    margin-bottom: 10px;
+    width: 100%;
 }
+
 .floating-label label {
-  position: absolute;
-  top: calc(50% - 7px);
-  left: 0;
-  opacity: 0;
-  transition: all 0.3s ease;
-  padding-left: 44px;
+    position: absolute;
+    top: calc(50% - 7px);
+    left: 0;
+    opacity: 0;
+    transition: all 0.3s ease;
+    padding-left: 44px;
 }
+
 .floating-label input {
-  width: calc(100% - 44px);
-  margin-left: auto;
-  display: flex;
+    width: calc(100% - 44px);
+    margin-left: auto;
+    display: flex;
 }
+
 .floating-label .icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 56px;
-  width: 44px;
-  display: flex;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    height: auto;
+    /* biar fleksibel */
+    width: 44px;
+    display: flex;
+    align-items: center;
+    /* center icon */
+    justify-content: center;
+    /* center horizontal */
 }
+
+.floating-label .icon button {
+    opacity: 0.5;
+}
+
 .floating-label .icon svg {
-  height: 30px;
-  width: 30px;
-  margin: auto;
-  opacity: 0.15;
-  transition: all 0.3s ease;
+    height: 30px;
+    width: 30px;
+    margin: auto;
+    opacity: 0.15;
+    transition: all 0.3s ease;
 }
+
 .floating-label .icon svg path {
-  transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
+
 .floating-label input:not(:-moz-placeholder-shown) {
-  padding: 28px 0px 8px 0px;
+    padding: 28px 0px 8px 0px;
 }
+
 .floating-label input:not(:placeholder-shown) {
-  padding: 28px 0px 8px 0px;
+    padding: 28px 0px 8px 0px;
 }
-.floating-label input:not(:-moz-placeholder-shown) + label {
-  transform: translateY(-10px);
-  opacity: 0.7;
+
+.floating-label input:not(:-moz-placeholder-shown)+label {
+    transform: translateY(-10px);
+    opacity: 0.7;
 }
-.floating-label input:not(:placeholder-shown) + label {
-  transform: translateY(-10px);
-  opacity: 0.7;
+
+.floating-label input:not(:placeholder-shown)+label {
+    transform: translateY(-10px);
+    opacity: 0.7;
 }
-.floating-label input:valid:not(:-moz-placeholder-shown) + label + .icon svg {
-  opacity: 1;
+
+.floating-label input:valid:not(:-moz-placeholder-shown)+label+.icon svg {
+    opacity: 1;
 }
-.floating-label input:valid:not(:placeholder-shown) + label + .icon svg {
-  opacity: 1;
+
+.floating-label input:valid:not(:placeholder-shown)+label+.icon svg {
+    opacity: 1;
 }
-.floating-label input:valid:not(:-moz-placeholder-shown) + label + .icon svg path {
-  fill: rgb(182, 157, 230);
+
+.floating-label input:valid:not(:-moz-placeholder-shown)+label+.icon svg path {
+    fill: rgb(182, 157, 230);
 }
-.floating-label input:valid:not(:placeholder-shown) + label + .icon svg path {
-  fill: rgb(182, 157, 230);
+
+.floating-label input:valid:not(:placeholder-shown)+label+.icon svg path {
+    fill: rgb(182, 157, 230);
 }
-.floating-label input:not(:valid):not(:focus) + label + .icon {
-  animation-name: shake-shake;
-  animation-duration: 0.3s;
+
+.floating-label input:not(:valid):not(:focus)+label+.icon {
+    animation-name: shake-shake;
+    animation-duration: 0.3s;
 }
 
 @keyframes shake-shake {
-  0% {
-    transform: translateX(-3px);
-  }
-  20% {
-    transform: translateX(3px);
-  }
-  40% {
-    transform: translateX(-3px);
-  }
-  60% {
-    transform: translateX(3px);
-  }
-  80% {
-    transform: translateX(-3px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
+    0% {
+        transform: translateX(-3px);
+    }
+    20% {
+        transform: translateX(3px);
+    }
+    40% {
+        transform: translateX(-3px);
+    }
+    60% {
+        transform: translateX(3px);
+    }
+    80% {
+        transform: translateX(-3px);
+    }
+    100% {
+        transform: translateX(0px);
+    }
 }
+
 .session {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: -moz-fit-content;
-  width: fit-content;
-  background: #ffffff;
-  border-radius: 4px;
-  box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
-  height: 430px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: -moz-fit-content;
+    width: fit-content;
+    background: #ffffff;
+    border-radius: 4px;
+    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
+    height: 430px;
 }
 
 .left {
-  width: 330px;
-  height: -moz-max-content;
-  height: max-content;
-  min-height: 100%;
-  position: relative;
-  background-image: url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-  background-size: cover;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+    width: 330px;
+    height: -moz-max-content;
+    height: max-content;
+    min-height: 100%;
+    position: relative;
+    background-image: url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
+
 .left svg {
-  height: 40px;
-  width: auto;
-  margin: 20px;
+    height: 40px;
+    width: auto;
+    margin: 20px;
 }
 
 @media (max-width: 767.98px) {
-  form {
-    width: 100%;
-    padding: 30px 35px;
-  }
-  .session {
-    width: 100vw;
-    flex-direction: column;
-  }
-  .session .left {
-    width: 100vw;
-  }
+    form {
+        width: 100%;
+        padding: 30px 35px;
+    }
+    .session {
+        width: 100vw;
+        flex-direction: column;
+    }
+    .session .left {
+        width: 100vw;
+    }
 }
