--- a/css/login/login.css
+++ b/css/login/login.css
@@ -169,7 +169,12 @@ input:focus {
 }
 
 .floating-label .icon button {
-    opacity: 0.5;
+    all: unset;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.4;
 }
 
 .floating-label .icon svg {
